--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Bungee');
 
-
-
 * {
     margin: 0;
     padding: 0;
@@ -12,13 +10,14 @@ body {
     background-color: black;
 }
 
-html {
+html,
+button {
     font-family: "Bungee";
 }
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(4, calc(100vw / 4));
+    grid-template-columns: repeat(4, minmax(auto, calc(100vw / 4)));
     grid-template-rows: repeat(3, auto);
     grid-template-areas:
     "header  header  header  header"
@@ -32,40 +31,29 @@ html {
 .footer {grid-area: footer;}
 
 .header {
-    background-image: url("../images/comic_patern1.jpg");
-    background-size: 100%;
-    clip-path: polygon(3% 15%, 96% 5%, 95% 90%, 2% 95%);
-    font-size: 2rem;
-    padding: 0 4rem;
-    color: purple;
-    text-shadow: -2px 2px red;
-}
-
-.footer {
-    background-image: url("../images/comic_patern2.jpg");
-    background-size: 100%;
-    clip-path: polygon(3% 15%, 96% 5%, 95% 90%, 2% 95%);
-}
-
-.filters {
-    margin: 1vw;
-    color: white
-}
-
-.footer {
-    background-color: red;
-}
-
-.gallery__box {
-    overflow: hidden;
+    height: 11vw;
+    background-color: white;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 3vw));
     position: relative;
 }
 
-.gallery__img {
-    height: 100%;
+.header__box {
+    background-image: url("../images/comic_patern1.jpg");
+    background-size: 100%;
+    height: calc(100% - 0.7vw);
+    width: 100%;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 3vw));
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 0;
+    left: 0;
+}
+
+.header__title {
+    font-size: 4vw;
+    line-height: 2;
+    padding: 0 5vw;
+    color: #741e65;
+    text-shadow: -0.2vw 0.2vw white;
 }
 
 .gallery {
@@ -77,6 +65,19 @@ html {
     grid-gap: 2px;
     grid-template-columns: repeat(7, 1fr);
     grid-auto-rows: calc((100vw / 4 * 3 - 4vw) / 7);
+}
+
+.gallery__box {
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+
+.gallery__img {
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .gallery__box--wide {
@@ -97,6 +98,79 @@ html {
 .gallery__box--big {
     grid-column: span 3;
     grid-row: span 3;
+}
+
+.gallery__overlay {
+    position: absolute;
+    bottom: calc((100vw / 4 * 3 - 4vw) / 7 * (-1));
+    left: 0;
+    height: calc((100vw / 4 * 3 - 4vw) / 7);
+    width: 100%;
+    background-color: white;
+    clip-path: polygon(0 calc(0% + 2vw), 100% 0, 100% 100%, 0 100%);
+    transition: all 300ms;
+}
+
+.gallery__overlay-box {
+    background-image: url("../images/comic_patern1_small.jpg");
+    background-position: center;
+    background-size: 100%;
+    height: 100%;
+    position: relative;
+    bottom: -0.7vw;
+    clip-path: polygon(0 calc(0% + 2vw), 100% 0, 100% 100%, 0 100%);
+    text-align: center;
+    padding: 2.5vw 1.5vw 0;
+    color: #741e65;
+    font-size: 1.8vw;
+    text-shadow: -0.15vw 0.15vw white;
+    line-height: 1.5;
+}
+
+.gallery__box:hover .gallery__overlay {
+    bottom: 0;
+}
+
+.filters {
+    margin: 1vw;
+    color: white
+}
+
+.filters__header {
+    border-bottom: solid 2px white;
+}
+
+.filters__box {
+    margin: 2vh 2vw 2vh 0;
+}
+
+.filters__button {
+    border: solid 2px black;
+    background: white;
+    color: black;
+    cursor: pointer;
+    padding: 0.2vw 0.4vw;
+    transition: all 200ms;
+}
+
+.filters__button:focus {
+    outline: none;
+}
+
+.filters__button:hover {
+    background-color: #ffb400;
+    color: red;
+}
+
+.footer {
+    background-image: url("../images/comic_patern2.jpg");
+    background-size: 100%;
+    clip-path: polygon(3% 15%, 96% 5%, 95% 90%, 2% 95%);
+}
+
+.clicked {
+    background-color: #ffb400;
+    color: red;
 }
 
 
