--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,15 @@ button {
 
 .filters__header,
 .filters__box {
-    padding: 1vh 2vw;
+    padding: 1vw 2vw;
+}
+
+.filters__header {
+    font-size: 2.5vw;
+}
+
+.filters__box {
+    line-height: 1;
 }
 
 .filters__box--active {
@@ -146,10 +154,16 @@ button {
     color: black;
 }
 
+.filters__title {
+    font-size: 1.5vw;
+    margin-bottom: 0.5vw;
+}
+
 .filters__button {
     border: solid 2px black;
     background: white;
     color: black;
+    font-size: 1vw;
     cursor: pointer;
     padding: 0.2vw 0.4vw;
     transition: all 200ms;
@@ -165,9 +179,21 @@ button {
 }
 
 .footer {
-    background-image: url("../images/comic_patern2.jpg");
+    height: 11vw;
+    background-color: white;
+    clip-path: polygon(0 0, 100% calc(0% + 3vw), 100% 100%, 0 100%);
+    position: relative;
+}
+
+.footer__box {
+    background-image: url("../images/comic_patern1.jpg");
     background-size: 100%;
-    clip-path: polygon(3% 15%, 96% 5%, 95% 90%, 2% 95%);
+    height: calc(100% - 0.7vw);
+    width: 100%;
+    clip-path: polygon(0 0, 100% calc(0% + 3vw), 100% 100%, 0 100%);
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .clicked {
